1.0.23 - Released 00-Month-0000
--------------------------------
- Enable the subtitle menu on some Samsung TV's.
- Add subtitle support for Panasonic TV's.
- Add workarounds for LifeTab tablets' bad behavior.

1.0.22 - Released 24-Aug-2011
--------------------------------
- Add bookmark support for some Samsung TV's.
- Fix a memory leak when certain model Samsung TV's or Roku devices are on the network.
- Fix detection of Samsung Series D models.
- Add WAV MIME workaround for Marantz Receivers and Roku SoundBridge.
- Fix bitrate displayed on Microsoft PFS devices.
- Fix a scanner crash when trying to scan image files with no read access.

1.0.21 - Released 18-July-2011
--------------------------------
- Fix a few issues with new libav/ffmpeg versions.
- Fix FF/REW of AVI files on Samsung Series B TV's.
- Fix a crash bug when playing music on TiVo.
- Add the ability to change the root media container.
- Add WAV/RIFF INFO tag parsing support for the most common tags.
- Fix a crash bug with clients that request a large number of results.

1.0.20 - Released 09-June-2011
--------------------------------
- Fix a crash bug when scanning MPEG-TS files with odd packet sizes.
- Fix AVI file streaming on Samsung A-Series TV's.
- Improve support for the NETGEAR Digital Entertainer Live (EVA2000).
- Add support for multiple network interfaces.
- Add subtitle support for LG TV's and Blu-Ray players.
- Fix some minor coding issues found by cppcheck.
- Add client adaptation support for Toshiba Regza TV's.
- Send known audio-only devices straight to the Music section on root requests.
- Add client adaptation support for Roku SoundBridge audio clients.
- Improve Sony client adaptation to allow support for more file types.
- Add support for reading tags from MP4 video files with recent lavf versions.
- Add support for Samsung's GetFeatureList method.

1.0.19 - Released 11-Mar-2011
--------------------------------