@@ -71,6 +71,8 @@ struct upnphttp {
 	int req_soapActionLen;
 	const char * req_Callback;	/* For SUBSCRIBE */
 	int req_CallbackLen;
+	const char * req_NT;
+	int req_NTLen;
 	int req_Timeout;
 	const char * req_SID;		/* For UNSUBSCRIBE */
 	int req_SIDLen;
@@ -92,9 +94,10 @@ struct upnphttp {
 #define FLAG_SID                0x00000002
 #define FLAG_RANGE              0x00000004
 #define FLAG_HOST               0x00000008
+#define FLAG_LANGUAGE           0x00000010
 
+#define FLAG_INVALID_REQ        0x00000040
 #define FLAG_HTML               0x00000080
-#define FLAG_INVALID_REQ        0x00000010
 
 #define FLAG_CHUNKED            0x00000100
 #define FLAG_TIMESEEK           0x00000200
